--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,29 @@
 version: '3.3'
+volumes:
+  media_food:
+  static_food:
+  pg_data_food:
+
 services:
+  db:
+    image: postgres:13.10
+    env_file: .env
+    volumes:
+      - pg_data_food:/var/lib/postgresql/data
+
+  backend:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    volumes:
+      - static_food:/app/static
+      - media_food:/app/media
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
 
   frontend:
     build:
@@ -7,6 +31,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - nginx
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +42,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_food:/staticfiles/static/
+      - media_food:/mediafiles/media/
+    depends_on:
+      - backend
