--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,8 @@
 server {
     server_tokens off;
     listen 80;
-    
+    client_max_body_size 20M;
+        
     location /static/rest_framework/ {
         root /staticfiles/;
     }
