--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,10 +12,7 @@ services:
       - pg_data_food:/var/lib/postgresql/data
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
-    #image: elvaleron/foodgram_backend
+    image: elvaleron/foodgram_backend
     env_file:
       - .env
     volumes:
@@ -25,10 +22,7 @@ services:
       - "8000:8000"
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
-    #image: elvaleron/foodgram_frontend
+    image: elvaleron/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
