--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,7 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
-        python -m flake8 backend/
-        cd backend/
+        python -m flake8 foodgram/
         python manage.py test
 
   build_and_push_to_docker_hub:
