--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Main Foodgram workflow
 
-on:
-  push:
+on: [push]
+
 
 jobs:
   tests:
@@ -60,30 +60,14 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./backend/
+          context: backend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
   
-  frontend_tests:
-    runs-on: alpine-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up nodeJS
-      uses: actions/setup-node@v3
-      with:
-        node-version: 13.12.0
-    - name: Install dependencies
-      run: |
-        cd frontend/
-        npm ci
-    - name: Test frontend
-      run: |
-        cd frontend/
-        npm run test
-
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
+    needs: tests
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Check out the repo
@@ -98,7 +82,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./frontend/
+          context: frontend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
