--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -10,9 +10,9 @@ server {
         root /staticfiles/;
     }
     location /media/ {
-        root /mediafiles/;
+        proxy_set_header Host $http_host;
+        alias /mediafiles/;
     }
-
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/api/;
@@ -21,10 +21,8 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/admin/;
     }
-
-
     location / {
-        root /usr/share/nginx/html;
+        root /staticfiles/;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
@@ -33,13 +31,11 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
     }
     location /api/docs/ {
-        root /usr/share/nginx/html;
+        alias /staticfiles/;
         try_files $uri $uri/redoc.html;
     }
-
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
