--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,5 +8,4 @@ RUN pip install -U pip &&\
     pip install -r requirements.txt --no-cache-dir
 COPY foodgram/ ./
 RUN chmod +x run_app.sh
-#CMD [ "gunicorn", "-b", "0:8000", "foodgram.wsgi" ]
-ENTRYPOINT [ "/app/run_app.sh" ]
+CMD [ "gunicorn", "-b", "0:8000", "foodgram.wsgi" ]
