--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -11,7 +11,7 @@ server {
     }
     location /media/ {
         proxy_set_header Host $http_host;
-        alias /mediafiles/;
+        root /mediafiles/;
     }
     location /api/ {
         proxy_set_header Host $http_host;
